Add new service to fetch the space weather alert report and parse it, so we can tell if a geomagnetic storm occurred on any given date

--- a/test/data/space_weather_alerts.html
+++ b/test/data/space_weather_alerts.html
@@ -971,7 +971,7 @@ Serial Number: 491<br>
 Issue Time: 2012 Jun 03 1947 UTC<br>
 </p>
 <p>WATCH: Geomagnetic A-index of 20 or greater predicted<br>
-NOAA Scale: Periods reaching the G1 (Minor) Level Likely<br>
+NOAA Scale: Periods reaching the G2 (Moderate) Level Likely<br>
 Valid for UTC Day: 2012 Jun 04<br>
 Potential Impacts: Area of impact primarily poleward of 60 degrees Geomagnetic Latitude.<br>
 Induced Currents - Weak power grid fluctuations can occur.<br>
